package paqueteprincipal;

public class P1ProyectoPOO {

    public static void main(String[] args) {
        Habitaciones habitaciones = new Habitaciones();
        habitaciones.mostrarHabitaciones();
    }
}
